# DurDur

./: HELP.md  README.md  TUTORIAL.md  pyproject.toml
src/durdur/: __init__.py  api.py  cli.py  io.py  models.py  preprocessing.py  recommendations.py  reports.py  utils.py
src/durdur/engines/: __init__.py  flowai_engine.py  flowclean_engine.py  peacoqc_engine.py
tests/: test_smoke.py
